// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlertTooltip > AlertTooltip 1`] = `
<DocumentFragment>
  <div
    aria-label="title1"
    class="MuiBox-root emotion-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;

exports[`AlertTooltip > AlertTooltip open 1`] = `
<DocumentFragment>
  <div
    aria-label="title2"
    class="MuiBox-root emotion-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;

exports[`AlertTooltip > AlertTooltip open dark 1`] = `
<DocumentFragment>
  <div
    aria-label="title3"
    class="MuiBox-root emotion-0"
    data-mui-internal-clone-element="true"
  />
</DocumentFragment>
`;
